data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2073.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\95\80\80\80\00\01\03\65\6e\76\0d\65\78"
    "\74\65\72\6e\61\6c\5f\66\75\6e\63\00\00\03\82\80"
    "\80\80\00\01\00\0a\9b\80\80\80\00\01\95\80\80\80"
    "\00\00\02\40\41\01\04\40\41\01\10\00\0c\00\05\41"
    "\01\0c\00\0b\0b\0b"
  )
""
)